# arithmetic_game

./: README.md
mobile/: .env.example  .gitignore  App.tsx  README.md  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
mobile/android/app/src/main/java/com/mobile/: MainActivity.java  MainApplication.java
mobile/android/app/src/main/res/values/: colors-splash.xml
mobile/ios/: Podfile  SplashScreen.storyboard
mobile/ios/mobile/: Info.plist
mobile/ios/mobile.xcodeproj/: project.pbxproj
mobile/src/app/: context.tsx  index.tsx  router.tsx  theme.ts
mobile/src/components/Appbar/: index.tsx  props.ts  styles.ts
mobile/src/components/Drawer/: index.tsx  props.ts  styles.ts
mobile/src/components/Form/: NumberField.tsx
mobile/src/pages/fail/: index.tsx  styles.ts
mobile/src/pages/intro/: index.tsx  styles.ts
mobile/src/pages/question/: index.tsx  props.ts  styles.ts
mobile/src/pages/success/: index.tsx  styles.ts
server/: README.md  pyproject.toml  setup.cfg
server/arithmetic_game_web/: __init__.py
server/arithmetic_game_web/game_logic/: arithmetic_expression.py  arithmetic_operator.py  game.py  score_keeper.py  small_integer.py
server/arithmetic_game_web/web_app/: app.py  serialization.py
server/static/: game.js  style.css
server/templates/: index.html
server/tests/: arithmetic_expression_tests.py  game_tests.py  score_keeper_tests.py  small_integer_tests.py
