[tool.poetry]
name = "arithmetic_game_web"
version = "0.1.0"
description = "Simple online arithmetic game, created for Learning Python the Hard Way, Exercise 52"
authors = ["Mojow Autonomous Solutions Inc. <info@mojow.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
"web.py" = "^0.62"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mock = "^4.0.3"
coverage = "^5.5"

[tool.poetry.scripts]
main = 'arithmetic_game_web.web_app.app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
